--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
+*{
+  font-family: 'Nunito';
+  font-weight: 100;
+}
+
 
 body {
   margin: 0;
@@ -14,3 +19,15 @@ code {
     monospace;
 }
 
+section {
+  text-align: center;
+  display: block;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Catamaran';
+}
+
+a {
+  text-decoration: none;
+}
