Finished layout for homepage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,15 @@
 .gold {
   color: #FFD100;
 }
+
+.lightblue {
+  background-color: #8BB8E8;
+}
+
+.darkblue {
+  background-color: #003B5C;
+}
+
+.white {
+  background-color: white;
+}
