--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -97,12 +97,28 @@
     margin: -9vh;
     z-index: -40;
     position: relative;
+    -webkit-animation: jump 1.2s cubic-bezier(0.3, 1.2, 0.8, 1.2);
+  animation: jump 1.2s cubic-bezier(0.3, 1.2, 0.8, 1.2);
+}
+@-webkit-keyframes jump {
+  0% {
+    transform: translateY(600px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes jump {
+  0% {
+    transform: translateY(600px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 
 .full-width-box {
-    margin-top: -9vh;
-    background-color: #8BB8E8;
     width: 100%;
     height: 25vh;
     border: none;
@@ -117,7 +133,6 @@
 
 #home-sub-section-title {
     margin: 0 auto;
-    width: 50vw;
     line-height: 6vh;
     padding-top: 7vh;
     color: white;
@@ -159,3 +174,11 @@
     font-family: 'Nunito';
 }
 
+/* Final Section */
+#home-final-section-title {
+    margin: 0 auto;
+    line-height: 6vh;
+    padding-top: 7vh;
+    font-size: calc(2vw + 0.25vh);
+    font-weight: lighter;
+} 
