--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,7 +1,7 @@
 /*HEADER*/
 #home-header {
     position: relative;
-    line-height: 10.5vh;
+    line-height: 73px;
     background-color: #2774AE;
     z-index: 1000;
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
@@ -9,30 +9,31 @@
 
 #home-header-content {
     vertical-align: middle;
-    padding: 0 7vw
+    padding: 0 100px;
+    max-width: 1180px;
+    margin: 0 auto;
 }
 
 #home-header-title {
     display: inline-block;
     color: white;
-    font-size: calc(2vw + 1vh);
-    letter-spacing: -0.1vw;
+    font-size: 36px;
+    letter-spacing: -1.5px;
 }
 
 #home-header-logo {
     color:#FFD100;
-    font-size: calc(2vw + 1vh);
-    padding-right: 0.5vw;
+    font-size: 36px;
+    padding-right: 7px;
 }
 
 #home-header-navigation {
     float: right;
 }
     #home-header-navigation > *{
-        margin-left: 2.5vw;
+        margin-left: 36px;
         color: white;
-        font-size: 2vh;
-        font-family: 'Nunito';
+        font-size: 14px;
         font-weight: bold;
     }
     #home-header-navigation > *:hover {
@@ -43,7 +44,8 @@
     background-color: white;
     border: none;
     border-radius: 5%;
-    padding: 1vw;
+    padding: 14px;
+    font-size: 14px;
     font-weight: bold;
 }
     .home-header-buttons:hover {
@@ -54,35 +56,35 @@
 /*Main Section*/
 #home-main-section-title {
     margin: 0 auto;
-    width: 60vw;
-    line-height: 6vh;
-    padding-top: 5.5vh;
+    width: 850px;
+    line-height: 42px;
+    padding-top: 37.5px;
     color: #2774AE;
-    font-size: 2.5vw;
+    font-size: 36px;
 }
 
 #home-main-section-description {
     margin: 0 auto;
-    width: 45vw;
-    line-height: 3vh;
-    padding-top: 2.5vh;
+    width: 660px;
+    line-height: 21px;
+    padding-top: 17px;
     color: black;
     font-weight: 100;
-    font-size: 1.2vw;
+    font-size: 17.1px;
     font-family: 'Nunito';
 }
 
 .home-main-section-button {
-    min-width: 10vw;
-    padding: 3vh 4vw;
+    min-width: 142px;
+    padding: 21px 56.8px;
     border-radius: 7.5px;
-    margin-top: 3vh;
+    margin-top: 21px;
     box-shadow: 0 5px 0 #003B5C;
     color: white;
     background-color: #2774AE;
     border: none;
     font-family: 'Catamaran';
-    font-size: 1vw;
+    font-size: 14.2px;
     z-index: 200;
 }
     .home-main-section-button:hover{
@@ -92,9 +94,9 @@
 
 
 #home-main-section-mainimg {
-    width: 45vw;
-    height: 75vh;
-    margin: -9vh;
+    width: 639px;
+    height: 540px;
+    margin-top: -85px;
     z-index: -40;
     position: relative;
     -webkit-animation: jump 1.2s cubic-bezier(0.3, 1.2, 0.8, 1.2);
@@ -102,7 +104,7 @@
 }
 @-webkit-keyframes jump {
   0% {
-    transform: translateY(600px);
+    transform: translateY(550px);
   }
   100% {
     transform: translateY(0px);
@@ -110,7 +112,7 @@
 }
 @keyframes jump {
   0% {
-    transform: translateY(600px);
+    transform: translateY(550px);
   }
   100% {
     transform: translateY(0px);
@@ -120,7 +122,7 @@
 
 .full-width-box {
     width: 100%;
-    height: 25vh;
+    height: 200px;
     border: none;
   }
   
@@ -128,35 +130,35 @@
 #home-sub-section-content {
     background-color: #2774AE;
     text-align: center;
-    padding-bottom: 4vh;
+    padding-bottom: 28px;
 }
 
 #home-sub-section-title {
     margin: 0 auto;
-    line-height: 6vh;
-    padding-top: 7vh;
+    line-height: 42px;
+    padding-top: 49px;
     color: white;
-    font-size: calc(2vw + 0.25vh);
+    font-size: 30.5px;
     font-weight: lighter;
 }
 
 #home-sub-section-claims {
-    margin: 0 auto;
-    width: 65vw;
-    padding: 5vh 0;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    margin: 35px auto;
+    width: 850px;
 }
 
 .claim {
-    vertical-align: text-top;
-    display: inline-block;
-    width: 30%;
+    flex-basis: 30%;
 }
 
 .circle {
     margin: 0 auto;
     border-radius: 50%;
-    width: 80%;
-    line-height: 15.6vw;
+    width: 200px;
+    line-height: 200px;
     background-color: #FFC72C;
 }
 
@@ -169,16 +171,14 @@
 
 .claim-description {
     color: white;
-    margin-top: 2vh;
-    min-width: 80%;
-    font-family: 'Nunito';
+    margin-top: 14px;
 }
 
 /* Final Section */
 #home-final-section-title {
     margin: 0 auto;
-    line-height: 6vh;
-    padding-top: 7vh;
-    font-size: calc(2vw + 0.25vh);
+    line-height: 42px;
+    padding-top: 49px;
+    font-size: 30.5px;
     font-weight: lighter;
 } 
