--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,45 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-
-
 .blue {
   color: #2774AE;
 }
@@ -48,14 +6,22 @@
   color: #FFD100;
 }
 
-.lightblue {
+.white {
+  color: white;
+}
+
+.blue-br {
+  background-color: #2774AE;
+}
+
+.lightblue-br {
   background-color: #8BB8E8;
 }
 
-.darkblue {
+.darkblue-br {
   background-color: #003B5C;
 }
 
-.white {
+.white-br {
   background-color: white;
 }
