--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 *{
   font-family: 'Nunito';
   font-weight: 100;
+  box-sizing: border-box;
 }
 
 
@@ -30,4 +31,9 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   text-decoration: none;
+}
+
+button:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
