Compiled similar css between pages and added an about page

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,53 +1,4 @@
-/*HEADER*/
-#home-header {
-    position: relative;
-    line-height: 73px;
-    background-color: #2774AE;
-    z-index: 1000;
-    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
-}
-
-#home-header-content {
-    vertical-align: middle;
-    padding: 0 100px;
-    max-width: 1180px;
-    margin: 0 auto;
-}
-
-#home-header-title {
-    display: inline-block;
-    color: white;
-    font-size: 36px;
-    letter-spacing: -1.5px;
-}
-
-#home-header-logo {
-    color:#FFD100;
-    font-size: 36px;
-    padding-right: 7px;
-}
-
-#home-header-navigation {
-    float: right;
-}
-    #home-header-navigation > *{
-        margin-left: 36px;
-        color: white;
-        font-size: 14px;
-        font-weight: bold;
-    }
-    #home-header-navigation > *:hover {
-        opacity: 70%;
-    }
-
-.home-header-buttons {
-    background-color: white;
-    border: none;
-    border-radius: 5%;
-    padding: 14px;
-    font-size: 14px;
-    font-weight: bold;
-}
+/*Home navigation header CSS found in App.css
 
 /*Main Section*/
 #home-main-section-title {
