--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,74 @@
+/*/////////////////////////////////////
+  Header of home, about, contact pages
+/////////////////////////////////////*/
+#header {
+  position: relative;
+  line-height: 73px;
+  background-color: #2774AE;
+  z-index: 1000;
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+}
+
+#header-content {
+  vertical-align: middle;
+  padding: 0 100px;
+  max-width: 1180px;
+  margin: 0 auto;
+}
+
+#header-title {
+  display: inline-block;
+  color: white;
+  font-size: 36px;
+  letter-spacing: -1.5px;
+}
+
+#header-logo {
+  color:#FFD100;
+  font-size: 36px;
+  padding-right: 7px;
+}
+
+#header-navigation {
+  float: right;
+}
+  #header-navigation > *{
+      margin-left: 36px;
+      color: white;
+      font-size: 14px;
+      font-weight: bold;
+  }
+  #header-navigation > *:hover {
+      opacity: 70%;
+  }
+
+.header-buttons {
+  background-color: white;
+  border: none;
+  border-radius: 5%;
+  padding: 14px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/*//////////////////////////////////////
+  Content shared by login and signup page
+//////////////////////////////////////*/
+.logSign-button {
+  border: none;
+  border-radius: 3px;
+  padding: 10px 30px ;
+  font-size: 16px;
+  height: 50px;
+  font-weight: bold;
+}
+
+.logSign-inputs {
+  width: 100%;
+}
+
+
+
 .blue {
   color: #2774AE;
 }
