--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
       font-weight: bold;
   }
   #header-navigation > *:hover {
-      opacity: 70%;
+      opacity: 0.7;
   }
 
 .header-buttons {
