Added functional criteria messages when client signs up or logs in

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,7 +68,35 @@
 }
 
 
+#message-container {
+  line-height: 50px; 
+  width: 100vw;
+  animation:mymove 2s ease-out forwards;
 
+  /* Safari and Chrome */
+  -webkit-animation:mymove 2s;
+  }
+
+  @keyframes mymove
+  {   
+      from {opacity: 0}
+      to { opacity: 1}
+  }
+
+  @-webkit-keyframes mymove /* Safari and Chrome */
+  {
+      from { opacity: 0; }
+      to { opacity: 1; }
+  }
+
+#message-container-content {
+  font-size: 15px;
+  font-family: 'Nunito';
+}
+
+/*//////////////////////////////////////
+ Popular colors used on this website!
+//////////////////////////////////////*/
 .blue {
   color: #2774AE;
 }
@@ -95,4 +123,12 @@
 
 .white-br {
   background-color: white;
+}
+
+.success-green-br {
+  background-color: #4BB543;
+}
+
+.error-red-br {
+  background-color: #FF9494;   
 }
