Added messages when planner manipulation succeeds or fails

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,9 +67,10 @@
   width: 100%;
 }
 
-
+/* Used across all pages */
 #message-container {
   line-height: 50px; 
+  text-align: center;
   width: 100vw;
   animation:mymove 2s ease-out forwards;
 
