Adjusted margins on contact on signup pages

--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -1,3 +1,29 @@
+#contact-main-content {
+  margin: 0 auto;
+  min-height: calc(99vh - 125px);
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: black;
+}
+
+#contact-main-heading {
+  font-family: 'Nunito';
+  font-size: 27px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+#contact-main-subheading {
+  font-family: 'Nunito';
+  font-size: 16px;
+  margin: 10px;
+}
+
+
+
 .contact-name-inputs {
     width: 50%;
   }
