Redesigned contact page and hooked feedback submission to personal email

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,7 +71,7 @@
 #message-container {
   line-height: 50px; 
   text-align: center;
-  width: 100vw;
+  width: 100%;
   animation:mymove 2s ease-out forwards;
 
   /* Safari and Chrome */
