--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,6 +51,54 @@
   font-weight: bold;
 }
 
+/*/////////////////////////////////////
+  Footer of home, about, contact pages
+/////////////////////////////////////*/
+#footer {
+  position: relative;
+  height: inherit;
+  width: 850px;
+  margin: 0 auto;
+}
+
+#footer-content {
+  width: inherit;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#copyright {
+  color: white;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+
+#footer-socials {
+  position: absolute;
+  right: 0;
+  font-size: 35px;
+  margin-top: 10px;
+}
+  #footer-socials > *{
+    margin-left: 10px;
+    color: white;
+    cursor: pointer;
+  }
+  #footer-socials > *:hover {
+    opacity: 0.7;
+  }
+
+/*/////////////////////////////////////
+  Content shared by home and about pages
+/////////////////////////////////////*/
+.full-width-box {
+  width: 100%;
+  height: 200px;
+  border: none;
+}
+
 /*//////////////////////////////////////
   Content shared by login and signup page
 //////////////////////////////////////*/
